// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`walk > walkExportDeclaration > ExportAllDeclaration 'type' 1`] = `
[
  {
    "exported": "*",
    "isType": true,
    "local": "*",
    "source": "a",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportAllDeclaration 'value' 1`] = `
[
  {
    "exported": "*",
    "isType": false,
    "local": "*",
    "source": "a",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'class with id' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "Cls",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'class' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "default",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'expression with VariableDeclaration' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "one",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'expression' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "default",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'function with id' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "foo",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'function' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "default",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportDefaultDeclaration 'ts declaration' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "tsFoo",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '1' 1`] = `
[
  {
    "exported": "v",
    "isType": false,
    "local": "v",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '2' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "f",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '3' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "default",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '4' 1`] = `
[
  {
    "exported": "default",
    "isType": false,
    "local": "default",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '5' 1`] = `
[
  {
    "exported": "x",
    "isType": false,
    "local": "x",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '6' 1`] = `
[
  {
    "exported": "x",
    "isType": false,
    "local": "v",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '7' 1`] = `
[
  {
    "exported": "x",
    "isType": false,
    "local": "x",
    "source": "mod",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '8' 1`] = `
[
  {
    "exported": "x",
    "isType": false,
    "local": "v",
    "source": "mod",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '9' 1`] = `
[
  {
    "exported": "*",
    "isType": false,
    "local": "*",
    "source": "mod",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportEntry record fields '10' 1`] = `
[
  {
    "exported": "ns",
    "isType": false,
    "local": "*",
    "source": "mod",
  },
]
`;

exports[`walk > walkExportDeclaration > ExportNamedDeclaration array complex declarations 1`] = `
[
  {
    "exported": "a",
    "isType": false,
    "local": "a",
    "source": null,
  },
  {
    "exported": "b",
    "isType": false,
    "local": "b",
    "source": null,
  },
  {
    "exported": "c",
    "isType": false,
    "local": "c",
    "source": null,
  },
  {
    "exported": "cAsign",
    "isType": false,
    "local": "cAsign",
    "source": null,
  },
  {
    "exported": "cRest",
    "isType": false,
    "local": "cRest",
    "source": null,
  },
  {
    "exported": "four",
    "isType": false,
    "local": "four",
    "source": null,
  },
  {
    "exported": "fourInnerArray",
    "isType": false,
    "local": "fourArr",
    "source": null,
  },
  {
    "exported": "fourInnerArrayAsign",
    "isType": false,
    "local": "fourArr",
    "source": null,
  },
  {
    "exported": "fourInnerArrayRest",
    "isType": false,
    "local": "fourArr",
    "source": null,
  },
  {
    "exported": "o",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "aliasP",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "q",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "aliasR",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "so",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "AliasSP",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "sq",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "AliasSR",
    "isType": false,
    "local": "fourObj",
    "source": null,
  },
  {
    "exported": "rest",
    "isType": false,
    "local": "rest",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportNamedDeclaration declarations 1`] = `
[
  {
    "exported": "a",
    "isType": false,
    "local": "a",
    "source": null,
  },
  {
    "exported": "b",
    "isType": false,
    "local": "b",
    "source": null,
  },
  {
    "exported": "one",
    "isType": false,
    "local": "one",
    "source": null,
  },
  {
    "exported": "foo",
    "isType": false,
    "local": "foo",
    "source": null,
  },
  {
    "exported": "clz",
    "isType": false,
    "local": "clz",
    "source": null,
  },
  {
    "exported": "enumA",
    "isType": false,
    "local": "enumA",
    "source": null,
  },
  {
    "exported": "interfaceA",
    "isType": true,
    "local": "interfaceA",
    "source": null,
  },
  {
    "exported": "typeA",
    "isType": true,
    "local": "typeA",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportNamedDeclaration object complex declarations 1`] = `
[
  {
    "exported": "o",
    "isType": false,
    "local": "o",
    "source": null,
  },
  {
    "exported": "aliasP",
    "isType": false,
    "local": "p",
    "source": null,
  },
  {
    "exported": "q",
    "isType": false,
    "local": "q",
    "source": null,
  },
  {
    "exported": "aliasR",
    "isType": false,
    "local": "r",
    "source": null,
  },
  {
    "exported": "so",
    "isType": false,
    "local": "s",
    "source": null,
  },
  {
    "exported": "AliasSP",
    "isType": false,
    "local": "s",
    "source": null,
  },
  {
    "exported": "sq",
    "isType": false,
    "local": "s",
    "source": null,
  },
  {
    "exported": "AliasSR",
    "isType": false,
    "local": "s",
    "source": null,
  },
  {
    "exported": "a",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "b",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "c",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "cAsign",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "cRest",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "four",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "fourInnerArray",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "fourInnerArrayAsign",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "fourInnerArrayRest",
    "isType": false,
    "local": "t",
    "source": null,
  },
  {
    "exported": "rest",
    "isType": false,
    "local": "t",
    "source": null,
  },
]
`;

exports[`walk > walkExportDeclaration > ExportNamedDeclaration specifiers 1`] = `
[
  {
    "exported": "one",
    "isType": false,
    "local": "one",
    "source": null,
  },
  {
    "exported": "aliasOne",
    "isType": false,
    "local": "one",
    "source": null,
  },
  {
    "exported": "specifierTypeOne",
    "isType": true,
    "local": "one",
    "source": null,
  },
  {
    "exported": "d",
    "isType": false,
    "local": "default",
    "source": "z",
  },
  {
    "exported": "nodeTypeOne",
    "isType": true,
    "local": "one",
    "source": null,
  },
  {
    "exported": "two",
    "isType": true,
    "local": "two",
    "source": null,
  },
  {
    "exported": "a",
    "isType": false,
    "local": "a",
    "source": "z",
  },
  {
    "exported": "aliasB",
    "isType": false,
    "local": "b",
    "source": "z",
  },
  {
    "exported": "zAll",
    "isType": false,
    "local": "*",
    "source": "z",
  },
  {
    "exported": "c",
    "isType": true,
    "local": "c",
    "source": "z",
  },
  {
    "exported": "aliasTypeD",
    "isType": true,
    "local": "d",
    "source": "z",
  },
  {
    "exported": "zTypeAll",
    "isType": true,
    "local": "*",
    "source": "z",
  },
]
`;
